--- a/bibliography.bib
+++ b/bibliography.bib
@@ -555,3 +555,9 @@ month={9},
   title={{Lido on Ethereum Validator \& Node metrics}},
   url={https://app.hex.tech/8dedcd99-17f4-49d8-944e-4857a355b90a/app/3f7d6967-3ef6-4e69-8f7b-d02d903f045b/latest},
 }
+
+@misc{abu2023,
+  author={Abu, Hanni},
+  title={{Client Diversity | Ethereum}},
+  url={https://clientdiversity.org/#distribution},
+}
