--- a/conference_101719.tex
+++ b/conference_101719.tex
@@ -43,15 +43,13 @@ blockchain, Ethereum, decentralization, cryptocurrency, cryptoeconomics, web3
 
 \section{Introduction}
 
-As web3 and cryptocurrencies are a relatively nascent socio-technological innovation, the broader cryptocurrency ecosystem is in a phase of initial rapid innovation, in which the architecture and topology of the networks are evolving significantly.  This is a well understood phenomenon in technological innovation, which was documented as early as the 1960s \cite{rogers2010diffusion}, in which the innovation and adoption of new technologies develop in an “S-Curve” shape, involving compressed stages of very rapid innovation followed by a period where innovation plateaus for a time.  Ethereum is an example of a technology that is in the rapid innovation phase, in which there are significant changes to the topology of the overall network, both intrinsic and extrinsic to the core protocol.
-
-Previous research \cite{gochhayat2020measuring, lin2021measuring, karakostas2022sok} focused on measuring decentralization at the various layers of a vertical stack within a monolithic system.  The contribution of this paper is a model for measuring decentralization that adapts previous models to Ethereum's contemporary ecosystem topology, allowing for consideration of changes to the overall architecture over time.
+The contribution of this paper is to propose a model for measuring decentralization that accommodates any structural changes in wider network topology over time.  As web3 and cryptocurrencies are a relatively nascent socio-technological innovation, the broader cryptocurrency ecosystem is in a phase of initial rapid innovation, in which the architecture and topology of the networks are evolving significantly.  This is a well understood phenomenon in technological innovation, which was documented as early as the 1960s \cite{rogers2010diffusion}, in which the innovation and adoption of new technologies develop in an “S-Curve” shape, involving compressed stages of very rapid innovation followed by a period where innovation plateaus for a time.  Ethereum is an example of a technology that is in the rapid innovation phase, in which there are significant changes to the topology of the overall network, both intrinsic and extrinsic to the core protocol.  Whereas previous research \cite{gochhayat2020measuring, lin2021measuring, karakostas2022sok} focused on measuring decentralization at the various layers of a vertical stack within a monolithic system, our model views Ethereum as a socio-technological ecosystem in which significant components of the network develop outside the core protocol.
 
 The paper is organized as follows: in section II we deliver an overview of how Ethereum is evolving and the challenges faced when attempting to measure its level of decentralization.  In section III we outline the various dimensions that we propose to measure with our model, and our data sources.  In section IV we describe our methodology, including the various indices that are applied to our data.  In section V we deliver a breakdown of results, and we close with our conclusions in section VI.
 
 \section{Background}
 
-It can be argued that protocols that are built on top of the base layer of Ethereum do not pose a direct threat to the base layer itself, even when they are highly centralized, and should therefore not be a factor in quantifying the network's level of decentralization.  Once the base layer is sufficiently decentralized, any number of protocol designs can be implemented on top of it, and ideally the base layer should not be aware of them, or be adversely affected by them.  However, as Ethereum evolves, users increasingly interact with the network through abstracted layers of infrastructure that overlay the core protocol, and as such it can be conversely argued that such protocols could potentially affect the security and/or performance of the overall network under certain conditions, and should therefore be considered within a holistic model of the networks' level of decentralization.   Our criteria for inclusion within our model is that the component being measured does not just serve a single use case or application, but is a protocol through which users interact with an arbitrary number of other dapps and protocols.
+It can be argued that protocols that are built on top of the base layer of Ethereum do not pose a direct threat to the base layer itself, even when they are highly centralized, and should therefore not be a factor in quantifying the network's level of decentralization.  Once the base layer is sufficiently decentralized, any number of protocol designs can be implemented on top of it, and ideally the base layer should not be aware of them, or be adversely affected by them.  However, as Ethereum evolves, users increasingly interact with the network through abstracted layers of infrastructure that overlay the core protocol, and as such it can be conversely argued that such protocols could potentially affect the security and/or performance of the overall network under certain conditions, and should therefore be considered within a holistic model of measurement of the networks' level of decentralization. Our criteria for inclusion within our model is that the component being measured does not just serve a single use case or application, but is a protocol through which users interact with an substantial number of other dapps and protocols.
 
 Any infrastructure that assumes a significant role in Ethereum can pose a centralization risk to the overall network based on two critical factors:
 \begin{enumerate}[label=\alph*.]
@@ -473,9 +471,9 @@ By themselves these ratios are not useful measurements as the range within the r
 
 \subsection{Jensen-Shannon Divergence}
 
-As we are interested in measuring the changes to levels of decentralization over time,  we employ a method described by Lin \cite{lin1991divergence} as the JenSen-Shannon Divergence, which is a method to measure of the level of similarity or divergence between two probability distributions.  The JSD is useful for applying across the various dimensions of measurements in our model, particularly because it has a defined upper bound, which means it can be scaled for comparison with other index values.  In order to scale the JSD, we normalize it be dividing the result by the upper bound of the possible range of results, which in model, is $log_2$.
+As we are interested in measuring the changes to levels of decentralization over time,  we employ a method described by Lin \cite{lin1991divergence} as the Jensen-Shannon Divergence, which is a method to measure of the level of similarity or divergence between two probability distributions.  The JSD is useful because it has a defined upper bound, which means it can be scaled for comparison with other index values.  In order to scale the JSD, we normalize it be dividing the result by the upper bound of the possible range of results, which in model, is $log_2$.
 
-We calculate the JSD between two intervals by comparing the distribution of each one across each measurement dimension respectively.  As such, we define $p$ and $q$  as two probability distributions, taken from two discrete intervals of a single metric, represented as vectors of sizes $n$ and $m$ respectively. It is important that both vectors are the same size, therefore if $n < m$,  we pad $p$ with zeros until it matches the size of $q$, or if $m < n$, we pad $q$ with zeros until it matches the size of $p$.  As our data is categorical in nature, we also align values each distribution such that $p$ and $q$ are ordered by category.  The normalized JSD is then calculated as follows:
+We calculate the JSD between two intervals by comparing the distribution of each one across each measurement dimension respectively.  As such, we define $p$ and $q$  as two probability distributions, taken from two discrete intervals of a single metric, represented as vectors of sizes $n$ and $m$ respectively. The normalized JSD is then calculated as follows:
 
 
 \[ D_{JS}(p||q) = \frac{1}{\log_2} \left( \frac{1}{2} D_{KL}(p||m) + \frac{1}{2} D_{KL}(q||m) \right) \]
@@ -484,11 +482,15 @@ We calculate the JSD between two intervals by comparing the distribution of each
 
 where $m = \frac{1}{2} (p + q)$  is the average of $p$ and $q$, and $D_{KL}(p||m)$ and $D_{KL}(q||m)$ are the Kullback-Leibler divergences of $p$ and $q$  from $m$ respectively, defined as:
 
+\vspace{6pt}
+
 \[
 D_{KL}(p||q) = \sum_{i=1}^{n} p(i) \log \frac{p(i)}{q(i)}
 \]
 
 \vspace{8pt}
+
+It is important to note that both vectors are the same size, therefore if $n < m$,  we pad $p$ with zeros until it matches the size of $q$, or if $m < n$, we pad $q$ with zeros until it matches the size of $p$.  As our data is categorical in nature, we also align values each distribution such that $p$ and $q$ are ordered by category.  
 
 The normalized JSD is calculated across each measurement dimension for both the 1 day, 30, 60 and 90 day intervals in order to track and quantify any changes in decentralization in specific subsystems over time.
 
@@ -570,6 +572,30 @@ The values in the table in \ref{fig:average indices} are color coded for legibil
 most notably  . . . . . .
 
 While the Gini index and the HHI are each better suited to specific dimensions of measurement, there can often be nuances that they fail to capture by themselves.  An illustrative given by Buterin \cite{buterin2022b} is where there are two hypothetical societies with profound levels of inequality, one in which half the population equally shares all the resources while the other half has none, and the other in which one person has half of all the resources, everyone else equally shares the remaining half.  In Buterin's example, both distributions would result in the same Gini index value, despite having radically different characteristics.
+
+
+% \begin{tikzpicture}
+% \begin{axis}[
+%     ybar,
+%     enlargelimits=0.15,
+%     legend style={at={(1,1)},
+%     anchor=north east},
+%     ylabel={Income},
+%     symbolic x coords={Individual 1, Individuals 2-25, Individuals 26-50, Individuals 51-75, Individuals 76-100},
+%     xtick=data,
+%     nodes near coords,
+%     nodes near coords align={vertical},
+%     x tick label style={rotate=45,anchor=east},
+%     title={Income Distribution in Society A and B},
+%     bar width=7pt,
+% ]
+% \addplot coordinates {(Individual 1,0) (Individuals 2-25,0) (Individuals 26-50,0) (Individuals 51-75,5) (Individuals 76-100,5)};
+% \addplot coordinates {(Individual 1,100) (Individuals 2-25,0) (Individuals 26-50,0) (Individuals 51-75,0) (Individuals 76-100,0)};
+% \legend{Society A, Society B}
+% \end{axis}
+% \end{tikzpicture}
+
+
 
 These limitations form the rationale behind in the inclusion of the Shannon index within our model.  The Shannon index is sensitive to both size of the distribution and the diversity of different values in the distribution, and is therefore able to highlight differences between distributions that the Gini index does not capture.
 
