Added results for Rollus By TVL

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -561,3 +561,17 @@ month={9},
   title={{Client Diversity | Ethereum}},
   url={https://clientdiversity.org/#distribution},
 }
+
+@article{checkmate2021,
+  author={Checkmate},
+  journal={Glassnode Insights - On-Chain Market Intelligence},
+  month={5},
+  title={{The Week On-chain (Week 18, 2021)}},
+  year={2021},
+  url={https://insights.glassnode.com/the-week-on-chain-week-18-2021/},
+}
+
+@misc{defillama,
+  title={{DefiLlama}},
+  url={https://defillama.com/chain/Ethereum},
+}
