Added results discussion for Stablcoins by TVL

--- a/conference_101719.tex
+++ b/conference_101719.tex
@@ -38,7 +38,7 @@ Ethereum is undergoing significant changes to its architecture as it evolves.  T
 \end{abstract}
 
 \begin{IEEEkeywords}
-blockchain, Ethereum, decentralization, cryptocurrency, cryptoeconomics, web3
+blockchain, Ethereum, decentralization, cryptocurrency, cryptoeconomics, WORK IN PROGRESS!!
 \end{IEEEkeywords}
 
 \section{Introduction}
@@ -657,7 +657,10 @@ Rather than accounting for Lido's decentralized quality by breaking down the com
 
 \subsubsection{Exchanges by Supply}
 
-Through measuring the Exchanges by Supply we see a relatively high level of concentration among the top exchanges in the ecosystem.  It is worth noting though that Coinbase is missing from this list!!
+Through measuring the Exchanges by Supply we see a relatively high level of concentration among the top exchanges in the ecosystem.
+
+\textbf{\textcolor{red}{Note to self: this data seems flawed - need to validate and cross-reference, e.g. Coinbase is missing !? - perhaps this metric should be removed completely - is it even still relevant?}}
+
 
 \begin{figure}[ht]
     \begin{tikzpicture}
@@ -761,7 +764,7 @@ It is worth noting again that these figures will more than likely change over ti
 
 \subsubsection{Stablecoins by TVL}
 
-We observe the highest value for the Gini index in teh Stablecoins by TVL metric.
+We observe the highest value for the Gini index in the "Stablecoins by TVL" metric, which also has a markedly high HHI value.  This suggests a very high level of concentration within the stablecoin market, which is obvious when we examine the underlying data, that shows that just two stablecoins comprise over 80\% of the market, i.e. USDC and USDT. As both stablecoins are issued by corporations, this represents a significant area of centralization with Ethereum.  Stablecoins are used by many people to interact with a wide array of dapps, and both USDC and USDT are vulnerable to censorship.  According to DefiLlama\cite{defillama}, the combined market cap for stablecoins on Ethereum is ~9.2B USD, which represents a third of the TVL on Ethereum.  This could arguably be the weakest point of Ethereum's overall decentralization.
 
 \newpage
 
