Updated to 90 day sample period

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -575,3 +575,27 @@ month={9},
   title={{DefiLlama}},
   url={https://defillama.com/chain/Ethereum},
 }
+
+@misc{hildobby2023,
+  author={Hildobby},
+  title={{ETH Stakers}},
+  url={https://dune.com/queries/2394100/3928083},
+  publisher={Dune Analytics}
+}
+
+@article{haqshanas2022,
+  author={Haqshanas, Ruholamin},
+  journal={Tokenist},
+  month={8},
+  title={{Tornado Cashs USDC Frozen as Stablecoin Censorship Fears Grow}},
+  year={2022},
+  url={https://tokenist.com/tornado-cashs-usdc-frozen-as-stablecoin-censorship-fears-grow/},
+}
+
+@article{de2022,
+  author={De, Nikhilesh},
+  month={2},
+  title={{Circle confirms freezing 100K in USDC at law enforcements request}},
+  year={2022},
+  url={https://www.coindesk.com/markets/2020/07/08/circle-confirms-freezing-100k-in-usdc-at-law-enforcements-request/},
+}
